[tool.poetry]
name = "arbiter"
version = "0.1.0"
description = ""
authors = ["Phillip Lord"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.poetry.group.test]
[tool.poetry.group.test.dependencies]
pytest = "^6.0.0"
